--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
      <link rel="stylesheet" href="responsive.css">
 
-    <title>Restraunt Website</title>
+    <title>Restaurant Website</title>
 </head>
 
 <body>
