--- a/index.html
+++ b/index.html
@@ -2,20 +2,34 @@
 <html lang="en">
 
 <head>
+
+    <!-- ##############Meta_Tags#############-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Riya Tyagi">
+    <meta name="description"
+        content="Udupi Krishna Restaurant Now avilable in Sector 137 Noida. Fresh and Best quality Taste.">
+
+    <meta name="keywords" content="Featured Products , view Desserts, Desserts,North Indian Food">
+
+
+    <!-- Font-Awesome-Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Style Links -->
     <link rel="stylesheet" href="index.css" class="css">
 
      <link rel="stylesheet" href="responsive.css">
 
+     <!-- Title of the Website -->
     <title>Restaurant Website</title>
 </head>
 
 <body>
     <div class="wrapper">
 
+        <!-- Navbar -->
         <nav class="navbar">
             <div class="navbar-container container">
                  <input type="checkbox"> 
@@ -36,6 +50,7 @@
             </div>
         </nav>
 
+        <!-- Showcase Area  -->
         <section class="showcase-area" id="showcase">
             <div class="showcase-container container">
                 <h1 class="main-title">Eat Right Food</h1>
@@ -44,6 +59,8 @@
             </div>
         </section>
 
+
+        <!-- About Section -->
         <section id="about">
             <div class="about-wrapper container">
                 <div class="about-text">
@@ -63,6 +80,7 @@
             </div>
         </section>
 
+        <!-- Food Section -->
         <section id="food">
             <h2>Types of food</h2>
             <div class="food-container container">
@@ -99,6 +117,7 @@
             </div>
         </section>  
 
+        <!-- Food Menu Section -->
         <section class="food-menu" id="food-menu">
           <h2 class="food-menu-heading">
             Food Menu
@@ -175,6 +194,8 @@
           </div>
         </section>
 
+        <!-- Testimonial Section -->
+
         <section class="testimonial">
             <h2 class="testimonial-title" id="testimonials">What our customers say</h2>
 
@@ -242,6 +263,8 @@
             </div>
         </section>
 
+        <!-- Contact Section -->
+
         <section id="contact">
             <div class="contact-container container">
                 <div class="contact-image">
@@ -258,6 +281,7 @@
             </div>
         </section>
 
+     <!-- Footer Section -->
         <footer id="footer">
-            <h2>Restraunt Website &copy; all right reserved.</h2>
+            <h2>Restaurant Website &copy; | All Rights Reserved.</h2>
         </footer>
